rnsc/test_data/integration/error/parser/class_header/access_flags/protected.rns
.class protected HelloWorld
.super java/lang/Object
.class_end
